--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
+    "@apollo/client": "^3.7.7",
     "apollo-server": "^3.11.1",
     "graphql": "^16.6.0",
     "prop-types": "^15.8.1",
